# larjango

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  artisan  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: workflow.yml
app/: admin.py  apps.py  models.py
app/Models/: Permission.py  Role.py  User.py  __init__.py
app/Policies/: UserPolicy.py  __init__.py
app/Providers/: AppServiceProvider.py
app/migrations/: 0001_initial.py
bootstrap/: app.py  asgi.py  settings.py  urls.py  wsgi.py
config/: app.py  cors.py  csrf.py  database.py  session.py
database/seeders/: DatabaseSeeder.py
larajango/: apps.py  assets.py  authorization.py  blade.py  cache.py  cli.py  config.py  controllers.py  csrf.py  inertia.py  middleware.py  pagination.py  queue.py  rate_limiting.py  requests.py  responses.py  routing.py  session.py  storage.py  urls.py  validation.py  views.py
larajango/console/: __init__.py  application.py
larajango/contracts/: __init__.py  assets.py  auth.py  blade.py  cache.py  config.py  filesystem.py  http.py  queue.py  rate_limiting.py  routing.py  session.py  support.py  urls.py  validation.py  views.py
larajango/foundation/: __init__.py  application.py  middleware.py  providers.py  service_provider.py
larajango/http/: __init__.py  request.py  responses.py
larajango/support/: __init__.py  facades.py  (+1 more)
routes/: api.py  web.py
(+12 files in other folders)
