[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "larajango"
version = "0.1.0"
description = "A Laravel-flavored Django starter with Inertia-style pages and artisan-like commands."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0,<6.0",
]

[project.scripts]
larajango = "larajango.cli:main"

[tool.setuptools.packages.find]
include = ["larajango*"]
